--- a/plugins/sgs-blocks/src/blocks/counter/style.css
+++ b/plugins/sgs-blocks/src/blocks/counter/style.css
@@ -46,8 +46,8 @@
 	display: block;
 	font-size: clamp(2.5rem, 6vw, 4rem);
 	font-weight: 700;
-	line-height: 1;
-	margin-bottom: var(--wp--preset--spacing--10);
+	line-height: 1.1;
+	margin-bottom: var(--wp--preset--spacing--20);
 	position: relative;
 }
 
